# nextjs-pydantic-ai-vercel-demo

./: .env.example  .gitignore  README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  prettier.config.cjs  pyproject.toml  requests.http  requirements.txt  tsconfig.json
api/: index.py
src/app/: actions.ts  globals.css  layout.tsx  page.tsx
src/components/: app.tsx  language-selector.tsx  theme-toggle.tsx  translation-input.tsx  translation-output.tsx
src/components/ui/: accordion.tsx  breadcrumb.tsx  calendar.tsx  carousel.tsx  chart.tsx  checkbox.tsx  combobox.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  form.tsx  input-otp.tsx  input.tsx  menubar.tsx  navigation-menu.tsx  progress.tsx  radio-group.tsx  resizable.tsx  scroll-area.tsx  select.tsx  sheet.tsx  slider.tsx  toast.tsx
src/hooks/: use-toast.ts
src/lib/: translation.ts  utils.ts
